--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marcacaoDeConsultasMedicas",
+  "name": "meuprimeiroapprn",
   "license": "0BSD",
   "version": "1.0.0",
   "main": "index.ts",
@@ -10,17 +10,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/native": "^7.0.17",
+    "@react-navigation/native-stack": "^7.3.1",
+    "@react-navigation/stack": "^7.2.1",
+    "@types/styled-components": "^5.1.34",
+    "@types/styled-components-react-native": "^5.2.5",
     "expo": "~52.0.38",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7",
     "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.2",
     "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1"
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native-elements": "^0.18.0",
     "typescript": "^5.3.3"
   },
   "private": true
