--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "marcacaoDeConsultasMedicas",
+  "name": "marcacaodeconsultasmedicas",
   "license": "0BSD",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -19,7 +19,7 @@
     "@react-navigation/stack": "^7.2.1",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
-    "expo": "~52.0.38",
+    "expo": "~52.0.40",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
